removed layout.css file, added emotion global style with relevant bits to layout, added the marginnote css stuff to blog-post.css to prevent overlap

--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -1,12 +1,3 @@
-@charset "UTF-8";
-
-body {
-  background-color: #666666;
-}
-
-a {
-  color: #cc5500;
-}
 
 ul {
     margin-left: 5%;
